--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <!--div témoignage"-->
                 <h2>Un témoignage des siècles passés</h2>
-                <div class=" gauche spaceBetween flex">
+                <div class="spaceBetween flex">
                     <div class="width45 top20 card">
                         <img src="assets/imgGallerie1.png" alt="" class="image">
                         <p class="back">lorem ipsum dolor - legend</p>
@@ -136,7 +136,7 @@
 
             </div>
             <!--partie de droite-->
-            <aside class="w25 droite">
+            <aside class="w25">
                 <nav class="carte">
                     <h3>Articles récents</h3>
                     <ul>
